<resources>
    <string name="app_name">HyperConnect</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_devices">Devices</string>
    <string name="title_events">Events</string>
    <string name="title_add_device">Add Device</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notifications_of_device">Notifications of</string>
    <string name="title_sensors">Sensors of</string>
    <string name="title_add_event">Add Event</string>
    <string name="title_history">History</string>
    <string name="title_attributes">Attributes</string>
    <string name="title_carrier">Carrier</string>

    <string name="text_device_name">Device Name</string>
    <string name="text_device_address">Device Address</string>
    <string name="text_device_scan">Scan QR code of the device.</string>
    <string name="text_placeholder_devices_1">No Devices</string>
    <string name="text_placeholder_devices_2">Please connect to an Edge Client.</string>
    <string name="text_no_categories">No categories</string>
    <string name="text_online">Online</string>
    <string name="text_offline">Offline</string>
    <string name="text_pending">Pending</string>
    <string name="text_activate_device">Activate the device on the Edge Client.</string>
    <string name="text_placeholder_sensors_1">No Sensors</string>
    <string name="text_placeholder_sensors_2">Please add a sensor on the Edge Client.</string>
    <string name="text_active">Active</string>
    <string name="text_deactivated">Deactivated</string>
    <string name="text_placeholder_events_1">No Events</string>
    <string name="text_placeholder_events_2">Please add an event on this Mobile or on the Edge Client.</string>
    <string name="text_source">Source</string>
    <string name="text_action">Action</string>
    <string name="text_event_source">Event Source</string>
    <string name="text_event_action">Event Action</string>
    <string name="text_event_parameters">Event Parameters</string>
    <string name="text_event_device">Device:</string>
    <string name="text_event_sensor">Sensor:</string>
    <string name="text_event_attribute">Attribute:</string>
    <string name="text_event_attribute_average">Attribute Average:</string>
    <string name="text_event_condition">Event Condition:</string>
    <string name="text_event_value">Event Value:</string>
    <string name="text_event_tigger_value">Trigger Value:</string>
    <string name="text_event_name">Name:</string>
    <string name="text_no_value">No Value</string>
    <string name="text_placeholder_notifications_1">No Notifications</string>
    <string name="text_placeholder_notifications_2">Search by other filter.</string>
    <string name="text_placeholder_categories_1">No Categories</string>
    <string name="text_placeholder_categories_2">Please add a category.</string>
    <string name="text_placeholder_dashboard_1">No Pinned Attributes</string>
    <string name="text_placeholder_dashboard_2">Please mark an attribute as pinned.</string>
    <string name="text_disconnected">Disconnected</string>
    <string name="text_connected">Connected</string>
    <string name="text_filter">Filter</string>
    <string name="text_sensors">Sensors:</string>
    <string name="text_no_categories_for_filtering">No categories are selected for filtering.</string>
    <string name="text_categories">Categories</string>
    <string name="text_favourite_chart">Favourite Chart</string>
    <string name="text_chart_pinned">Chart has been pinned to dashboard.</string>
    <string name="text_chart_unpinned">Chart has been unpinned from dashboard.</string>
    <string name="text_placeholder_live_charts_1">No Data</string>
    <string name="text_placeholder_live_charts_2">Waiting for live values.</string>
    <string name="text_placeholder_advanced_charts_1">No Data</string>
    <string name="text_placeholder_advanced_charts_2">Search by other filter.</string>

    <string name="button_home">Home</string>
    <string name="button_finish">Finish</string>
    <string name="button_add_device">Add Device</string>
    <string name="button_sensors">Sensors</string>
    <string name="button_notifications">Notifications</string>
    <string name="button_edit_device">Edit</string>
    <string name="button_remove_device">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_update">Update</string>
    <string name="button_details">Details</string>
    <string name="button_history">History</string>
    <string name="button_send">Send</string>
    <string name="button_close">Close</string>
    <string name="button_add">Add</string>
    <string name="button_back">Back</string>
    <string name="button_categories">Categories</string>
    <string name="button_live">Live</string>
    <string name="button_advanced">Advanced</string>


    <string name="hint_enter_device_name">Please type the device name.</string>
    <string name="hint_enter_address">Or enter the address manually.</string>
    <string name="hint_enter_action_value">Please type the action value.</string>
    <string name="hint_enter_event_value">Event Value (required)</string>
    <string name="hint_enter_event_trigger_value">Event Trigger Value (required)</string>
    <string name="hint_enter_event_name">Event Name (required)</string>
    <string name="hint_enter_category_name">Enter Category Name</string>
    <string name="hint_select_date">-- Select Date --</string>


    <string name="snack_device_name_empty">Device Name is empty.</string>
    <string name="snack_device_address_empty">Device Address is empty.</string>
    <string name="snack_device_address_not_valid">Device Address is not valid.</string>
    <string name="snack_something_went_wrong">Sorry, something went wrong.</string>
    <string name="snack_device_request">Request to device has been sent.</string>
    <string name="snack_remove_device">Device has been removed.</string>
    <string name="snack_edit_device">Device has been updated.</string>
    <string name="snack_attribute_state_changed">Attribute state has been changed.</string>
    <string name="snack_attribute_input_value_empty">Please fill out the required field for the attribute.</string>
    <string name="snack_attribute_input_value_whitespace">The input field cannot contain whitespace.</string>
    <string name="snack_attribute_not_active">Attribute is not active.</string>
    <string name="snack_attribute_execute_action">Action message has been sent.</string>
    <string name="snack_event_state_changed">Event state has been changed.</string>
    <string name="snack_event_source_action_attribute_must_be_active">The source and action attributes for this event must be activated.</string>
    <string name="snack_event_source_attribute_must_be_active">The source attribute for this event must be activated.</string>
    <string name="snack_event_action_attribute_must_be_active">The action attribute for this event must be activated.</string>
    <string name="snack_device_offline">Device is offline.</string>
    <string name="snack_event_source_action_device_must_be_online">The source and action devices for this event must be online.</string>
    <string name="snack_event_source_device_must_be_online">The source device for this event must be online.</string>
    <string name="snack_event_action_device_must_be_online">The action device for this event must be online.</string>
    <string name="snack_event_added">Event has been added.</string>
    <string name="snack_category_name_empty">Category Name is empty.</string>
    <string name="snack_category_name_exists">Category Name exists.</string>
    <string name="snack_category_added">Category has been added.</string>
    <string name="snack_category_updated">Categories has been updated.</string>
    <string name="snack_category_filter_updated">Filter for categories has been updated.</string>
    <string name="snack_event_value_is_empty">Event Value is empty.</string>
    <string name="snack_event_trigger_value_is_empty">Trigger Value is empty.</string>
    <string name="snack_event_name_is_empty">Event Name is empty.</string>
    <string name="snack_attribute_script_state_must_be_valid">Script state must be valid.</string>
    <string name="snack_cannot_use_file_sharing">You cannot use the file sharing feature for history.</string>
    <string name="snack_all_options_must_be_selected">All options must be selected.</string>
    <string name="snack_data_transfer_error">Data Transfer Error.</string>
    <string name="snack_chart_is_loading">Chart is loading.</string>


    <string name="dialog_title_remove_device">Remove Device</string>
    <string name="dialog_text_remove_device">Are you sure you want to remove this device?</string>
    <string name="dialog_title_edit_device">Edit Device</string>
    <string name="dialog_title_attribute_details">Attribute Details</string>
    <string name="dialog_text_attribute_name">Name:</string>
    <string name="dialog_text_attribute_direction">Direction:</string>
    <string name="dialog_text_attribute_type">Type:</string>
    <string name="dialog_text_attribute_interval">Interval:</string>
    <string name="dialog_text_attribute_interval_seconds">seconds</string>
    <string name="dialog_text_attribute_interval_event_driven">Event-driven</string>
    <string name="dialog_text_attribute_script_state">Script State:</string>
    <string name="dialog_text_attribute_state">State:</string>
    <string name="dialog_title_add_category">Add or Assign Category</string>
    <string name="dialog_text_add_new_category">Add New Category</string>
    <string name="dialog_text_assign_categories">Assign Categories</string>
    <string name="dialog_text_filter_categories">Filter by Categories</string>
    <string name="dialog_text_select_categories">Select Categories</string>
    <string name="dialog_title_event_details">Event Details</string>
    <string name="dialog_text_event_type">Type:</string>
    <string name="dialog_text_event_average">Average:</string>
    <string name="dialog_text_event_condition">Condition:</string>
    <string name="dialog_text_event_condition_value">Condition Value:</string>
    <string name="dialog_text_event_trigger_value">Trigger Value:</string>


</resources>
