<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"

    android:gravity="center_horizontal"
    android:paddingBottom="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_text_filter_categories"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/dialog_text_select_categories"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/emptyPlaceholder"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_categories_1"
            android:textAlignment="center"
            android:textColor="@color/colorMetal"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_categories_2"
            android:textAlignment="center"
            android:textColor="@color/colorMetal"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/categories_recyclerview"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_recyclerview_categories" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/button_close"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_cancel_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorWhite"
            android:background="@drawable/button_background"
            android:padding="3dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button_update"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_save_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorWhite"
            android:background="@drawable/button_background"
            android:padding="3dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
    </LinearLayout>


</LinearLayout>