<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingBottom="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_title_remove_device"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_text_remove_device"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/button_cancel"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_cancel_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorWhite"
            android:background="@drawable/button_decline_background"
            android:padding="3dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/button_confirm"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_done_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorWhite"
            android:background="@drawable/button_accept_background"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
    </LinearLayout>
</LinearLayout>