<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_title_attribute_details"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_attribute_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_attribute_direction"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/directionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_attribute_type"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_attribute_interval"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/intervalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_attribute_script_state"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/scriptStateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_attribute_state"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/stateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/button_close"
        android:textColor="@color/colorWhite"
        android:drawableStart="@drawable/ic_cancel_black_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorWhite"
        android:background="@drawable/button_background"
        android:padding="3dp"
        android:minWidth="0dp"
        android:minHeight="0dp"/>

</LinearLayout>